# IoTEarthquakeSimulator

./: .gitignore  CMakeLists.txt  README.md  install.sh  install_deps.sh  publisher.cpp  subscriber.cpp
src/: CMakeLists.txt  client.cpp  client.h  service.cpp  service.h  shared.cpp  shared.h
src/actuators/: CMakeLists.txt  main.cpp
src/controller/: CMakeLists.txt  main.cpp
src/data/: accelerometer.json  actuator_state.json  ultrasonic.json
src/generating_values/: accelerometer_val.cpp  ultrasonic_val.cpp
src/sensors/: CMakeLists.txt  main_accelerometer.cpp  main_ultrasonic.cpp  sensor.cpp  sensor.h
src/ssdp/: CMakeLists.txt
src/ssdp/lssdpcpp/: lssdpcpp.cpp  lssdpcpp.h
src/status/: CMakeLists.txt  main.cpp
